fix: Enhance NewOrder component styling with sticky positioning and background for improved visibility

--- a/frontend/src/assets/css/manager/NewOrder.module.css
+++ b/frontend/src/assets/css/manager/NewOrder.module.css
@@ -14,6 +14,13 @@
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 25px;
+  padding: 0 0 15px 0;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: #eff2f3 0% 0% no-repeat padding-box;
+  /* shadow still */
+  box-shadow: 0px 3px 6px #00000029;
 }
 
 .title {
